210923 수업 중 파일 개인학습_변수호출, 함수호출 궁금한 점 테스트

--- a/23-03.html
+++ b/23-03.html
@@ -27,6 +27,8 @@
         var a1 = 50;
 
         console.log("f2호출 함!!");
+        // f2; // UNDEFINED
+        // f2(); // 찾을 수 x
         var f2 = function () {
             console.log("f2호출 됨됨됨");
         }
