--- a/29-01.html
+++ b/29-01.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>회원가입 JS</title>
+    <title>회원가입 JS 유효성체크</title>
     <script>
         window.addEventListener("load", pageLoadedHandler);
         function pageLoadedHandler(){
