210923 수업 중 회원가입 페이지 만들기 중 오타 수정

--- a/29-01.html
+++ b/29-01.html
@@ -88,7 +88,7 @@
                 // 비밀번호와 비밀번호 확인란이
                 // 동일하지 않으면 alert 창으로 "동일하게 입력해주세요"   // action으로 이동되지 않음.
                 if(pw1value != pw2value) {
-                    aleart("동일하게 입력해주세요");
+                    alert("동일하게 입력해주세요");
                     return false;
                 }
 
